--- a/projects/tire_performance_analysis.qmd
+++ b/projects/tire_performance_analysis.qmd
@@ -1,21 +1,27 @@
 ---
-title: Analysis of Tire Performance on Lap Speed
-subtitle: Comparison of Pirelli and Hankook Tires
+title: Analysis of Tire Performance
+subtitle: Comparison of Pirelli and Hankook Racing Tires
 image: images/racing.jpeg
 ---
 \
 
-**March 2025**
+***March 2025***
 
-Determined that Hankook tires outperform Pirelli tires.
+Determined that Hankook tires outperformed Pirelli tires.
 
+- Sourced and cleaned data from Lamborghini Super Trofeo Series from the Laguna Seca track for the 2021-2024 racing seasons
+- Analyzed the switch in tire companies from Pirelli to Hankook in 2023 and the impact on both tire degradation and overall performance
 
-Sourced and cleaned data from Lamborghini Super Trofeo Series from the Laguna Seca track for the 2021-2024 seasons. 
+\
 
-- Analyzed the switch in tire companies from Pirelli to Hankook in the year 2023 and its impact on tire degradation and overall performance
-- Was the lead data analyst and created the visuals for data regarding Race 1, Race 2, and the different sectors within the course
-- Produced models for each sector lap times and the overall lap times with significant predictors and low variance inflation factors
+## <span>&#9734;</span> Data Analytics and Visualizations
 
-The final written report can be can be seen [here](/Analyzing Tire Degradation.pdf).
+As the lead data analyst, I created all visuals regarding Race 1, Race 2, and the sectors of the circuit. Additionally, I produced the final models for the individual sector lap times and overall lap times that maintained low variance inflation factors and different significant predictors for each model.
 
-The GitHub Repository containing my code is observable [here](https://github.com/cameryneh/Pirelli-vs-Hankook-Tire-Performance).
+The written report can be can be viewed [here](/Analyzing Tire Degradation.pdf).
+
+The GitHub Repository containing my code and visualizations is observable [here](https://github.com/cameryneh/Pirelli-vs-Hankook-Tire-Performance).
+
+\
+
+#### <span>&#9734;</span> {style="text-align: center;"}
