--- a/projects/coursekata_analysis.qmd
+++ b/projects/coursekata_analysis.qmd
@@ -5,13 +5,21 @@ image: images/stats.png
 ---
 \
 
-**April 2024**
+***April 2024***
 
 Awarded *Best Visualization* from ASA DataFest at UCLA, for my group's slide deck, findings, and presentation.
 
 - Analyzed 2,000,000+ rows across 6 datasets using R and Python for 48-hour competition of nearly 80 teams
 - Created and shared team findings in a 2-slide presentation to a panel of 25 judges and 400+ individuals
-- Developed strategic and compelling call-to-action suggestions to the CourseKata company representatives who provided the data
-- Achieved 97% prediction accuracy using random forest modeling
+
+\
+
+## <span>&#9734;</span> Data-Driven Narratives
+
+We developed strategic and compelling call-to-action suggestions to the CourseKata company representatives who provided the data, having achieved 97% prediction accuracy using random forest modeling.
 
 View my team's winning slide deck [here](/Team_DW.pdf).
+
+\
+
+#### <span>&#9734;</span> {style="text-align: center;"}
