--- a/projects/cyber_psyche.qmd
+++ b/projects/cyber_psyche.qmd
@@ -10,7 +10,7 @@ image: images/games.png
 Concluded that online gaming, when engaged with mindfully, can have beneficial effects on mental health.
 
 - Developed and designed a website through WordPress to present the data analysis, visualizations, and overall insights
-- The 2 datasets with 174,000+ rows combined contain various mental health metrics as well as geographical, socioeconomic, and behavioral information of online video game players from across the globe
+- The 2 datasets with 174K+ rows combined contain various mental health metrics as well as geographical, socioeconomic, and behavioral information of online video game players from across the globe
 
 \
 
