--- a/projects/coursekata_analysis.qmd
+++ b/projects/coursekata_analysis.qmd
@@ -9,7 +9,7 @@ image: images/stats.png
 
 Awarded *Best Visualization* from ASA DataFest at UCLA, for my group's slide deck, findings, and presentation.
 
-- Analyzed 2,000,000+ rows across 6 datasets using R and Python for 48-hour competition of nearly 80 teams
+- Analyzed 2M+ rows across 6 datasets using R and Python for 48-hour competition of nearly 80 teams
 - Created and shared team findings in a 2-slide presentation to a panel of 25 judges and 400+ individuals
 
 \
